Closed Bug 1711820 Opened 5 years ago Closed 5 years ago

[gcc 11] MoofParser.cpp:852:46: error: variable 'reserved' set but not used

Categories

(Core :: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -  In file included from Unified_cpp_dom_media_mp40.cpp:65:
[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -  /builds/worker/checkouts/gecko/dom/media/mp4/MoofParser.cpp: In member function 'mozilla::Result<mozilla::Ok, nsresult> mozilla::Tkhd::Parse(mozilla::Box&)':
[task 2021-05-19T01:47:42.001Z] 01:47:42    ERROR -  /builds/worker/checkouts/gecko/dom/media/mp4/MoofParser.cpp:852:46: error: variable 'reserved' set but not used [-Werror=unused-but-set-variable]
[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -    852 |     uint32_t creationTime, modificationTime, reserved, duration;
[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -        |                                              ^~~~~~~~
[task 2021-05-19T01:47:42.001Z] 01:47:42    ERROR -  /builds/worker/checkouts/gecko/dom/media/mp4/MoofParser.cpp:865:14: error: variable 'reserved' set but not used [-Werror=unused-but-set-variable]
[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -    865 |     uint32_t reserved;
[task 2021-05-19T01:47:42.001Z] 01:47:42     INFO -        |              ^~~~~~~~
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/2e0dabfee1c3 Avoid errors about unused `reserved` local variable. r=bryce
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Blocks: 1714004
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: