Bug 1711820 - Avoid errors about unused `reserved` local variable. r=bryce

Differential Revision: https://phabricator.services.mozilla.com/D115445